# Biomec-SAS

./: .gitignore  404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build.yml  coverage.yml  docs.yml  tests.yml
AUTHORS/: index.html
docs/: AUTHORS.md  estrutura_codigo.md  funcionalidades.md  guia_execucao.md  guia_usuario.md  index.md
estrutura_codigo/: index.html
funcionalidades/: index.html
guia_execucao/: index.html
guia_usuario/: index.html
search/: search_index.json
src/: main.py
src/arquivos/exportadores/: exp_graficos.py  historico.py
src/arquivos/parsers/: open_emt.py  open_tdf.py
src/arquivos/projeto/: gerenciadorSAS.py  salvar_projeto.py
src/controller/: gerenciador_estado.py
src/processamento/: executador_scripts.py  executador_scripts_graficos.py  gera_graficos.py  informacoes_curvas.py  limpeza.py  operacoes.py
src/ui/: arvore.py  dialogs_exportacao.py  dialogs_infos_curvas.py  dialogs_operacoes.py  dialogs_processamento.py  dialogs_scripts.py  exibe_graficos.py  main_window.py  utils.py
tests/: test_dialog.py  test_executador_scripts.py  test_executador_scripts_graficos.py  test_exibe_graficos.py  test_exportar_graficos.py  test_gera_graficos.py  test_gerenciador_estado.py  test_historico.py  test_informacoes_curvas.py  test_limpeza.py  test_main_window.py  test_open_emt.py  test_open_tdf.py  test_operacoes.py  test_salvar_projeto.py  test_sas.py  test_sas2.py
